WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74418
REGRESSION (
r102652
): New window opens with zero size at produbanco.com
https://bugs.webkit.org/show_bug.cgi?id=74418
Summary
REGRESSION (r102652): New window opens with zero size at produbanco.com
Sveto
Reported
2011-12-13 09:38:45 PST
Starting
r102661
a new bug has been introduced. The best is probably a following example: My bank's page is:
http://www.produbanco.com/GFPNet/
To log-in into my account I click on "Banca de Personas". With this a new full screen size window is opened that will host shortly the secure java applet of the bank. As of
r102661
following the link opens a small chrome window that has only the address present. Luckily this window can be resized, so it does not prevent completely the access to the secure section, but because scrolling is deactivated, the general menu options of the site remain hidden under the chrome bar. Returning to
r102580
solves the problem at once.
Attachments
Patch
(2.34 KB, patch)
2011-12-13 13:16 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-12-13 10:06:52 PST
I suspect <
http://trac.webkit.org/r102652
>, also known as "it's absolutely fine to return a stale value".
Sveto
Comment 2
2011-12-13 12:15:40 PST
Further on the subject it fails to open a simple window from a button. Example is the speed tester at:
http://www.grupotvcable.com.ec/grupo/speedtest/
At the bottom of the page you will check-mark and than hit the button. It is supposed to open a window where you start a speed test. Just updated to
r102685
and the problem remains in full force. Again returning to
r102580
resolves all issues
Andreas Kling
Comment 3
2011-12-13 13:16:51 PST
Created
attachment 119075
[details]
Patch
WebKit Review Bot
Comment 4
2011-12-13 14:36:19 PST
Comment on
attachment 119075
[details]
Patch Rejecting
attachment 119075
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ng Source/WebCore/ChangeLog CONFLICT (content): Merge conflict in Source/WebCore/ChangeLog Failed to merge in the changes. Patch failed at 0001 Unreviewed, rolling out
r102693
. When you have resolved this problem run "git rebase --continue". If you would prefer to skip this patch, instead run "git rebase --skip". To restore the original branch and stop rebasing run "git rebase --abort". rebase refs/remotes/origin/master: command returned error: 1 Died at Tools/Scripts/update-webkit line 158. Full output:
http://queues.webkit.org/results/10847520
Andreas Kling
Comment 5
2011-12-13 15:59:31 PST
Comment on
attachment 119075
[details]
Patch Clearing flags on attachment: 119075 Committed
r102717
: <
http://trac.webkit.org/changeset/102717
>
Andreas Kling
Comment 6
2011-12-13 15:59:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug