Source/WebKit2/WebProcess/WebCoreSupport/WebChromeClient.cpp
@@ -106,15 +106,17 @@ void WebChromeClient::setWindowRect(const FloatRect& windowFrame)
 FloatRect WebChromeClient::windowRect()
 {
 #if PLATFORM(MAC)
-    return m_page->windowFrameInScreenCoordinates();
-#else
+    FloatRect cachedWindowFrame(m_page->windowFrameInScreenCoordinates());
+    if (!cachedWindowFrame.isEmpty())
+        return cachedWindowFrame;
+#endif
+
     FloatRect newWindowFrame;
 
     if (!WebProcess::shared().connection()->sendSync(Messages::WebPageProxy::GetWindowFrame(), Messages::WebPageProxy::GetWindowFrame::Reply(newWindowFrame), m_page->pageID()))
         return FloatRect();
 
     return newWindowFrame;
-#endif
 }
 
 FloatRect WebChromeClient::pageRect()
